# rrc

./: .gitignore  Cargo.toml  LICENSE  README.md  test.py  test.sh
.github/workflows/: integration.yml
crates/ast/src/: lib.rs  types.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: graph.rs  lib.rs  lowering.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
docs/: README.md
src/: main.rs
tests/: expected.json  test.rs
tests/_example/: multi_digit.rs  newlines.rs  no_newlines.rs  return_0.rs  return_5.rs  spaces.rs  tabs.rs
tests/control_flow/: if.rs
tests/integer/: add.rs  associativity.rs  associativity_2.rs  associativity_3.rs  associativity_and_precedence.rs  bitwise_and.rs  bitwise_or.rs  bitwise_precedence.rs  bitwise_shift_associativity.rs  bitwise_shift_associativity_2.rs  bitwise_shift_precedence.rs  bitwise_shiftl.rs  bitwise_shiftr.rs  bitwise_xor.rs  div.rs  div_neg.rs  mod.rs  mul.rs  parens.rs  precedence.rs  sub.rs  sub_neg.rs  unop_add.rs  unop_parens.rs
tests/integer/comparison/: eq.rs  lt.rs  ne.rs
tests/integer/more_unary/: bitwise.rs  bitwise_int_min.rs  bitwise_zero.rs  neg.rs  neg_zero.rs  negate_int_max.rs  nested_ops.rs  nested_ops_2.rs  parens.rs  parens_2.rs  parens_3.rs  redundant_parens.rs
