workspace = { members = [ "crates/ast", "crates/codegen", "crates/hir","crates/lexer", "crates/parser"] }
[package]
name = "rrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "crates/parser" }
hir = { path = "crates/hir" }
codegen = { path = "crates/codegen" }
clap = "3.0.0-beta.5"